src/objects/BudgetTask__c.object
<CustomObject>
    <fields>
        <fullName>AppliedTotalRevenue__c</fullName>
        <formula>BLANKVALUE(OverrideTotalRevenue__c, 
   BLANKVALUE(TotalRevenue__c, 0)  )</formula>
        <label>Applied Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetHeader__c</fullName>
        <label>Budget Header</label>
        <referenceTo>BudgetHeader__c</referenceTo>
        <relationshipLabel>Budget Tasks</relationshipLabel>
        <relationshipName>BudgetTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HasChildren__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HierarchyDepth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hierarchy Depth</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HierarchyIds__c</fullName>
        <label>Hierarchy Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAssignable__c</fullName>
        <formula>OR(

AND( ISPICKVAL(BudgetHeader__r.Project__r.BudgetStrategy__c, &apos;Top Task&apos;) , IsTopLevelTask__c)

,

AND( ISPICKVAL(BudgetHeader__r.Project__r.BudgetStrategy__c, &apos;Bottom Task&apos;) , IsBottomLevelTask__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Assignable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBottomLevelTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bottom Level Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTopLevelTask__c</fullName>
        <formula>ISBLANK(ProjectTask__r.pse__Parent_Task__c)</formula>
        <label>Is Top Level Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideTotalRevenue__c</fullName>
        <label>Override Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParentTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Parent Budget Tasks must be under same Budget Header.</errorMessage>
            <filterItems>
                <field>BudgetTask__c.BudgetHeader__c</field>
                <operation>equals</operation>
                <valueField>$Source.BudgetHeader__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BudgetTask__c</referenceTo>
        <relationshipLabel>Budget Tasks</relationshipLabel>
        <relationshipName>ChildTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Budget Tasks</relationshipLabel>
        <relationshipName>BudgetTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskNumberCompound__c</fullName>
        <formula>ProjectTask__r.pse__Project__r.ProjectNumber__c + &quot;-&quot; +  ProjectTask__r.ProjectTaskNumber__c</formula>
        <label>Task Number (Compound)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalApprovedCost__c</fullName>
        <label>Total Approved Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalContingencyRevenue__c</fullName>
        <label>Total Contingency Revenue</label>
        <summarizedField>BudgetAssignment__c.CalculatedRevenue__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Contingency</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalContingency__c</fullName>
        <label>Total Contingency</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Contingency</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalEstimateCost__c</fullName>
        <label>Total Estimate Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalForecastCost__c</fullName>
        <label>Total Forecast Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Forecast, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFringe__c</fullName>
        <label>Total Fringe</label>
        <summarizedField>BudgetAssignment__c.TotalFringe__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFullyBurdenedLaborRate__c</fullName>
        <label>Total Fully Burdened Labor Rate</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLaborCost__c</fullName>
        <label>Total Labor Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLaborHours__c</fullName>
        <label>Total Labor Hours</label>
        <summarizedField>BudgetAssignment__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLaborRevenue__c</fullName>
        <label>Total Labor Revenue</label>
        <summarizedField>BudgetAssignment__c.CalculatedRevenue__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalODCCost__c</fullName>
        <label>Total ODC Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>ODC/FEE</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalODCRevenue__c</fullName>
        <label>Total ODC Revenue</label>
        <summarizedField>BudgetAssignment__c.CalculatedRevenue__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>ODC/FEE</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOverhead__c</fullName>
        <label>Total Overhead</label>
        <summarizedField>BudgetAssignment__c.TotalOverhead__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRawCost__c</fullName>
        <label>Total Raw Cost</label>
        <summarizedField>BudgetAssignment__c.TotalRawCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <summarizedField>BudgetAssignment__c.CalculatedRevenue__c</summarizedField>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSubCost__c</fullName>
        <label>Total Sub Cost</label>
        <summarizedField>BudgetAssignment__c.FullyBurdenedCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSubRevenue__c</fullName>
        <label>Total Sub Revenue</label>
        <summarizedField>BudgetAssignment__c.CalculatedRevenue__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetAssignment__c.ResourceTypeText__c</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAssignment__c.BudgetTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Budget Task</label>
    <nameField>
        <displayFormat>BT-{000000000}</displayFormat>
        <label>Budget Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Delete_Task_with_Children</fullName>
        <active>false</active>
        <errorConditionFormula>HasChildren__c</errorConditionFormula>
        <errorMessage>You cannot update a budget task that has child tasks.</errorMessage>
    </validationRules>
</CustomObject>